<resources>
    <string name="app_name">CarWatcher</string>
    <string name="navigation_captured">Captured</string>
    <string name="navigation_submitted">Submitted</string>
    <string name="navigation_profile">Profile</string>
    <string name="no_captured_videos">You have not captured any videos yet. Use a connected flic button to start capturing.</string>
    <string name="no_submitted_videos">You have not submitted any videos yet. Press and hold one of your captured videos to submit.</string>
    <string name="missing_video_title">Missing Video File</string>
    <string name="missing_video_message">The video file appears to be missing. Would you like to delete this entry?</string>
    <string name="delete_videos_title">Delete videos</string>
    <string name="delete_videos_message">Are you sure you want to delete these %d videos?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="capture">Capture</string>
    <string name="view_captured">View Captured</string>
    <string name="stop_capturing">Stop Capturing</string>
    <string name="submitted">Submitted</string>
    <string name="notify_capturing_title">Capturing CarWatcher video</string>
    <string name="notify_capturing_text">Touch to stop capturing</string>
    <string name="notify_continuous_title">CarWatcher monitor started</string>
    <string name="notify_continuous_text">Touch to stop monitoring</string>
    <string name="notify_done_capturing_title">Captured a CarWatcher video</string>
    <string name="notify_done_capturing_text">Touch to play</string>
    <string name="notify_done_continuous_title">CarWatcher monitor stopped</string>
    <string name="notify_done_continuous_text">Reconnect with vehicle to reactivate</string>
    <string name="notify_channel_name">CarWatcher Notifications</string>
    <string name="notify_channel_description">Notification channel for notifications sent from the CarWatcher application</string>
    <string name="delete_associated_media">Delete associated media files</string>
    <string name="logout">Log Out</string>
    <string name="profile_captured">Captured</string>
    <string name="profile_submitted">Submitted</string>
    <string name="profile_acted_upon">Acted Upon</string>
    <string name="profile_processing">Processing</string>
    <string name="not_configured">Not Configured</string>
    <string name="video_item_submit">Submit</string>
    <string name="video_item_delete">Delete</string>
    <string name="video_name_hint">Enter video name</string>
    <string name="video_comment_hint">Enter video comment</string>
    <string name="comment_hint">Enter video comment</string>
    <string name="edit_video_name_message">Edit video name</string>
    <string name="edit_video_comment_message">Edit video comment</string>
    <string name="dummy_location">Canyon Road, Dhahran</string>
    <string name="getting_location">Getting Location</string>
    <string name="enabled">Enabled</string>
    <string name="language">Language</string>
    <string name="vehicle_integration">Vehicle Integration</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="settings">Settings</string>
    <string name="dhahran_eastern_province">Dhahran, Eastern Province</string>
    <string name="hani_audah">Hani Audah</string>
    <string name="comment_header">Comment</string>
    <string name="sample_comment">This is a long comment that will be used for demo purposes in the layout.</string>
    <string name="location_timeout">Location Timeout (sec)</string>
</resources>
