<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <LinearLayout
            android:id="@+id/user_profile_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <TextView
                        android:id="@+id/profile_review_count_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        tools:text="Review"
                        android:text="@string/profile_captured"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <TextView
                        android:id="@+id/profile_photo_count_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/profile_submitted"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <TextView
                        android:id="@+id/profile_saved_count_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="3"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/profile_acted_upon"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <TextView
                        android:id="@+id/profile_added_count_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/profile_processing"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        />
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/bluishGrey"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    >
                    <ImageView
                        android:id="@+id/profile_imageview"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/steve"
                        />
                    <TextView
                        android:id="@+id/profile_name_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        tools:text="Hani Audah"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:id="@+id/profile_location_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        tools:text="San Francisco"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>
            </RelativeLayout>
            <Button
                android:id="@+id/profile_logout_button"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/no_content_button"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/logout"
                tools:text="Log Out"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>

