<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="6dp"
    android:weightSum="100"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/video_item_thumbnail_imageview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:padding="6dp"
            android:src="@drawable/video_placeholder"
            />
        <ImageView
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:padding="6dp"
            android:src="@drawable/ic_play_circle_black"
            android:alpha="0.3"
            />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:padding="6dp"
            android:src="@drawable/ic_play_circle_white"
            android:alpha="0.3"
            android:visibility="gone"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:padding="4dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_item_video_name_textview"
            android:layout_marginTop="4dp"
            android:layout_marginStart="20dp"
            >
            <TextView
                android:id="@+id/video_item_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textAllCaps="true"
                tools:text="Video Name"
                />
            <ImageView
                android:id="@+id/video_item_name_edit_imageview"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="7dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_edit_grey"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_item_video_name_textview"
            android:layout_marginTop="4dp"
            android:layout_marginStart="20dp"
            >
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/ic_timer_dark_blue"
                />
            <TextView
                android:id="@+id/video_item_duration_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAllCaps="false"
                android:layout_marginStart="4dp"
                tools:text="00m:00s"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="20dp"
            >
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/ic_location_dark_blue"
                />
            <TextView
                android:id="@+id/video_item_location_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                tools:text="Prince Faisal St., Dhahran"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/video_item_comment_container"
            android:layout_height="65dp"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/user_profile_banner"
            android:background="@drawable/profile_textarea"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/comment_header"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                >
                <TextView
                    android:id="@+id/video_item_comment_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="@string/sample_comment"
                    android:textColor="@color/black"
                    />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="7dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_edit_grey"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:weightSum="100"
            >
            <LinearLayout
                android:id="@+id/video_item_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_delete_dark_blue"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="6dp"
                    android:text="@string/video_item_delete"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/video_item_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:id="@+id/video_item_submit_imageview"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_upload_dark_blue"
                    />
                <ImageView
                    android:id="@+id/video_item_submitted_imageview"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_upload_dark_blue"
                    android:visibility="gone"
                    />
                <TextView
                    android:id="@+id/video_item_submit_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="6dp"
                    android:text="@string/video_item_submit"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
